--- a/Shiseidme/liferay-server-context.plist
+++ b/Shiseidme/liferay-server-context.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>server</key>
-	<string>http://localhost:8080</string>
+	<string>http://192.168.50.31:8080</string>
 	<key>version</key>
 	<string>70</string>
 	<key>companyId</key>
