--- a/Shiseidme/liferay-server-context.plist
+++ b/Shiseidme/liferay-server-context.plist
@@ -3,12 +3,12 @@
 <plist version="1.0">
 <dict>
 	<key>server</key>
-	<string>http://localhost:8080</string>
+	<string>http://screens.liferay.org.es/</string>
 	<key>version</key>
 	<string>70</string>
 	<key>companyId</key>
-	<integer>20099</integer>
+	<real>20116</real>
 	<key>groupId</key>
-	<real>20126</real>
+	<real>20143</real>
 </dict>
 </plist>
